--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
-    "react-native": "0.72.5",
-    "react-native-safe-area-context": "^4.7.2",
-    "react-native-svg": "^13.14.0",
+    "react-native": "0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
   },
