--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-navigation/native": "^6.1.8",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.14",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
@@ -22,7 +24,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-gesture-handler": "^2.13.3",
+    "react-native-reanimated": "^3.5.4",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.27.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
