--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.13.3",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.27.0",
+    "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
     "typescript": "^5.1.3"
