--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
+    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.13.3",
+    "react-native-permissions": "^3.10.1",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.27.0",
