--- a/package.json
+++ b/package.json
@@ -25,16 +25,15 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
-    "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.13.3",
-    "react-native-permissions": "^3.10.1",
-    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
-    "typescript": "^5.1.3"
+    "react-native-vision-camera": "^3.6.4",
+    "typescript": "^5.1.3",
+    "vision-camera-code-scanner": "^0.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
