--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "~18.2.14",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
+    "expo-barcode-scanner": "^12.7.0",
     "expo-secure-store": "~12.3.1",
     "expo-status-bar": "~1.6.0",
     "phosphor-react-native": "^2.0.0",
@@ -26,14 +27,13 @@
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.13.3",
+    "react-native-permissions": "^3.10.1",
     "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.27.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
-    "react-native-vision-camera": "^3.6.4",
-    "typescript": "^5.1.3",
-    "vision-camera-code-scanner": "^0.2.0"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
